--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-<title> GRand titre </title>
+<title> Modification faite </title>
 <body>
   <h1> TITRE 1 </h1>
   <h2> Titre 2 </h2>
