--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title> Modification faite </title>
 <body>
-  <h1> TITRE 1 </h1>
+  <h1> MODIF TITRE 1 </h1>
   <h2> Titre 2 </h2>
 </body>
 </html>
