--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title> Modification faite </title>
 <body>
   <h1> MODIF TITRE 1 </h1>
-  <h2> Titre 2 </h2>
+  <h2> MODIF Titre 2 </h2>
 </body>
 </html>
